# LoggingWebinar

./: loggers.py  main.py  pyproject.toml
log_handlers/: google_smtp_handler.py  json_handler.py  queue_handler.py  slack_handler.py
src/: http_server.py  tcp_server.py  udp_server.py
